# RBAC_ecom_proj_POC

./: .gitignore  docker-compose.yml
.github/workflows/: cd.yml  ci.yml  rag-eval.yml
ShopEase/backend/: package-lock.json  package.json
ShopEase/backend/prisma/: copy_to_live.sql  seed.ts
ShopEase/frontend/: .dockerignore  Dockerfile
ShopEase/frontend/src/components/chat/: ChatWindow.tsx
ShopEase/frontend/src/components/product/: ProductDetailsClient.tsx  ProductInfo.tsx
ShopEase/frontend/src/components/shared/: ProductCard.tsx
ShopEase/frontend/src/redux/api/: streamChat.ts
ShopEase/frontend/src/redux/slices/: chatSlice.ts
apps/frontend/: next.config.ts
apps/frontend/src/components/allProducts/: ProductFilter.tsx
apps/frontend/src/components/checkout/: CheckoutCard.tsx
apps/frontend/src/redux/slices/: chatSlice.ts
ecom/: API_REFERENCE.md  Dockerfile  README.md  TESTING_GUIDE.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  seed_products.py  tmp_chat_response.json  worker.py
ecom/app/: __init__.py  config.py  db.py  main.py  models.py  schemas.py  startup_checks.py
ecom/app/middleware/: security_headers.py  telemetry.py
ecom/app/routers/: auth.py  carts.py  chat.py  payments.py  rag_admin.py  rag_feature_template.py  seed.py
ecom/app/services/: auth.py  azure_support_rag.py  external_rag_client.py  keyvault.py  langchain_support_rag.py  product_service.py  semantic_router.py  shopease_products.py  support_rag.py
ecom/frontend/: .env.example  README.md  index.html  tsconfig.json  vite.config.ts
ecom/frontend/src/: main.tsx
ecom/frontend/src/api/: client.ts
ecom/frontend/src/components/layout/: Footer.tsx  Header.tsx  MainLayout.tsx
ecom/frontend/src/pages/: Account.tsx  Home.tsx  NotFound.tsx  Orders.tsx  ProductList.tsx
ecom/frontend/src/pages/auth/: Login.tsx  Register.tsx
ecom/frontend/src/stores/: cartStore.ts
ecom/infra/: parameters.json
ecom/infra/modules/: acr.bicep  containerapp-env.bicep  ecom-api.bicep  keyvault.bicep  monitoring.bicep  redis.bicep  shopease-api.bicep  storage.bicep  worker.bicep
ecom/policies/common/: contact_and_support.md  privacy_and_data.md
ecom/policies/customer/: 202111910.md  account_and_support.md  b.md  g5pg8ug3e7shgka6.md  g77vxwb69x2d9m6j.md  gge5x8ev7vnvtk6r.md  glmxpl8leqbmuwda.md  gsl37wqtjzuya9qe.md  gz5r2y8qhenslw75.md  help.md  payments_and_security.md  returns_and_refunds.md  shipping_and_delivery.md
ecom/scripts/: smoke_test_rag.py
ecom/tests/: conftest.py  rag_qa_validation.json  rag_test_harness.py  test_health.py  test_products.py  test_rag_feature_template.py  test_usage_metrics.py
infra/db/init/: 01-create-databases.sql
services/rag/: requirements.txt
services/rag/app/: config.py  dependencies.py  logging_utils.py  schemas.py
services/rag/app/middleware/: body_size_limit.py  rate_limit.py
services/rag/app/routers/: chat.py  metrics.py  orders.py  products.py  rag_admin.py
services/rag/app/services/: azure_support_rag.py  embedding_provider.py  events.py  langchain_support_rag.py  order_service.py  prompt_registry.py  ragas_eval.py  ragas_jobs.py  ragas_online.py  semantic_router.py  shopease_products.py  stripe_service.py  usage_metrics.py
services/rag/frontend/: package-lock.json  package.json  tailwind.config.js
services/rag/frontend/src/: App.tsx  index.css
services/rag/frontend/src/components/: ChatBot.tsx
services/rag/infra/: README.md  main.bicep
services/rag/infra/modules/: frontend.bicep  logging.bicep  postgres.bicep
services/rag/policies/customer/: 202111750.md  202111770.md  202111950.md  202115040.md
services/rag/prompts/: README.md
services/rag/prompts/intent_anchors/: v1.yaml
services/rag/prompts/support_system/: v1.yaml
services/rag/scripts/: ragas_eval.py  run_rag_qa.py  seed_test_users.py  smoke_prompt_registry.py
services/rag/tests/: test_auth.py  test_chat.py  test_prompt_registry.py  test_rag_admin_ragas.py  test_rag_indexing.py  test_ragas_eval.py  test_ragas_online.py
services/storefront/: seed_products.py
services/storefront/app/: models.py  schemas.py  seed.py  serializers.py
services/storefront/app/core/: security.py
services/storefront/app/routers/: auth.py  chatbot.py  follows.py
services/storefront/tests/: test_products.py
shopease_backend/: .dockerignore  .env.example  Dockerfile  requirements-dev.txt  requirements.txt  seed_products.py
shopease_backend/app/: config.py  database.py  deps.py  main.py
shopease_backend/app/core/: cloudinary_helper.py  email_helper.py  errors.py  pagination.py  response.py
shopease_backend/app/routers/: admin.py  flash_sale.py  order.py  payment.py  product.py  recent_product.py  reviews.py  shop.py
shopease_backend/tests/: conftest.py  test_auth.py  test_health.py
(+14 files in other folders)
