[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fashionstore-ecom"
version = "1.0.0"
description = "Production-grade E-Commerce API with RAG Chatbot Integration"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Fashion Store Dev Team", email = "dev@fashionstore.com"}
]
keywords = [
    "fastapi",
    "ecommerce",
    "stripe",
    "rag",
    "chatbot",
    "postgresql",
    "async"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.32.1",
    "sqlalchemy==2.0.35",
    "asyncpg==0.30.0",
    "pydantic==2.10.0",
    "pydantic-settings==2.6.0",
    "python-jose==3.3.0",
    "bcrypt==4.2.0",
    "PyJWT==2.10.1",
    "stripe==11.0.0",
    "aiofiles==25.1.0",
    "python-json-logger==2.0.7",
    "tenacity==8.2.3",
    "openai==1.58.1",
    "azure-search-documents==11.6.0b9",
    "azure-identity==1.15.0",
    "azure-keyvault-secrets==4.7.0",
    "aiohttp==3.10.11",
    "langchain-core==1.2.18",
    "langchain-text-splitters==1.1.1",
    "numpy==2.4.3",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.4",
    "pytest-asyncio==0.23.2",
    "pytest-cov==4.1.0",
    "black==24.1.1",
    "isort==5.13.2",
    "pylint==3.0.3",
    "mypy==1.8.0",
    "ruff==0.2.2",
    "pre-commit==3.6.0",
]
azure = [
    "azure-storage-blob==12.19.0",
    "azure-monitor-opentelemetry==1.0.0",
]
docs = [
    "mkdocs==1.5.3",
    "mkdocs-material==9.5.3",
]

[project.urls]
Repository = "https://github.com/fashionstore/ecommerce-api"
Documentation = "https://docs.fashionstore.com/api"
Issues = "https://github.com/fashionstore/ecommerce-api/issues"
Changelog = "https://github.com/fashionstore/ecommerce-api/releases"

[tool.setuptools]
packages = ["app"]

[tool.setuptools.package-data]
app = ["static/**/*", "templates/**/*"]

[tool.black]
line-length = 100
target-version = ["py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | venv
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_mode = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_glob = ["*/migrations/*"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_optional = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "tests.*",
]
ignore_errors = true

[tool.pylint]
max-line-length = 100
disable = [
    "missing-docstring",
    "too-few-public-methods",
    "too-many-arguments",
    "duplicate-code",
]
good-names = ["i", "j", "k", "ex", "Run", "_", "id", "x", "y", "z", "df", "db", "pk"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "C",    # flake8-comprehensions
    "B",    # flake8-bugbear
]
ignore = [
    "E501",  # line too long (handled by black)
    "W503",  # line break before binary operator
    "C901",  # McCabe complexity
]
exclude = [
    ".git",
    "__pycache__",
    "dist",
    "build",
    ".venv",
    "venv",
    ".mypy_cache",
    ".pytest_cache",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
asyncio_mode = "auto"
addopts = """
    --strict-markers
    --cov=app
    --cov-report=term-missing
    --cov-report=html
    --cov-report=xml
"""
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["app"]
omit = [
    "*/tests/*",
    "*/__init__.py",
    "*/venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "if 0:",
    "if False:",
]
